--- a/assets/main.css
+++ b/assets/main.css
@@ -26,7 +26,7 @@ html, body{
         }
     }
     a{
-        color: rgb(206,59,44);
+        color: var(--fg);
         text-decoration: none;
     }
         
@@ -71,7 +71,7 @@ html, body{
             column-gap: 5rem;
         }
     }
-    @media (min-width: 1200px){
+    @media (min-width: 1100px){
         .efx-link-list{
             column-gap: 7rem;
             grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -124,3 +124,40 @@ html, body{
             top: .05rem;
         }
        
+    .efx-download-page{
+        
+    }
+    .efx-download-img{
+        width: 100%;
+    }
+    
+    .efx-download{
+        margin-bottom: 3rem;
+    }
+    .efx-download h3{
+        font-size: 1.8rem;
+        font-weight: normal;
+        margin-bottom: .3rem;
+    }
+    .efx-download img{
+        display: none;
+        width: 100%;
+        height: 300px;
+    }
+
+    @media (min-width: 720px){
+        .efx-download-page{
+            width: 66.66%;
+        }
+    }
+    @media (min-width: 1100px){
+        .efx-download-page{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+        .efx-download-img{
+            height: calc( 100vh - 13rem);
+            width: auto;
+        }
+    }
