--- a/assets/main.css
+++ b/assets/main.css
@@ -1,8 +1,8 @@
 *{
-   // outline: 1px solid lime;
+//outline: 1px solid lime;
 }
 :root{
-    --bg: rgb(0,0,0);
+    --bg: rgb(10,11,11);
     --fg: rgb(225,38,29);
 }
 
@@ -10,7 +10,7 @@ html, body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: #000000;
+    background: var(--bg);
     color: var( --fg);
     font-size: 14px;
     width: 100%;
@@ -162,21 +162,38 @@ html, body{
         }
     }
 
+.efx-press-header{
+    background-image: url('images/press-header.jpg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 50vh;
+    margin-bottom: 2rem;
+}
+    @media (min-width: 720px){
+        .efx-press-header{
+            height: 75vh;
+            margin-bottom: 4rem;
+        }
+    }
+
 
 .efx-press{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: stretch;
+    line-height: 1.2;
 }
     .efx-press section{
         font-size: 1.25rem;        
-        margin-bottom: 4rem;
-        width: calc(33.33% - 4rem);
+        margin-bottom: 2rem;        
     }
     .efx-press section img{
         width: 100%;
         height: auto;
+        display: block;
+        margin-bottom: 2rem;
     }
     .efx-press section p,
     .efx-press section ul,
@@ -195,4 +212,84 @@ html, body{
     .efx-press section ul{
         list-style: none;
         padding: 0;
+    }
+
+    .efx-press-contriblist li{
+        display: inline;        
+        break-inside: auto;
+    }
+    .efx-press-contriblist li:after{
+        content: ', ';
+    }
+    .efx-press-contriblist li:last-child:after{
+        content: '';
+    }
+
+    @media (min-width: 720px){
+        .efx-press section{
+            margin-bottom: 4rem;
+        }
+        .efx-press section img{
+            margin-bottom: 0;
+        }
+        .efx-press section{
+            width: calc(50% - 2rem);
+        }       
+        .efx-press .efx-press-images{
+            width: 100%;
+        }        
+
+        .efx-press .efx-press-stretch{   
+            width: 100%;         
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .efx-press .efx-press-stretch>div{
+            width: calc(50% - 2rem);
+        }
+        .efx-press .efx-press-stretch img{
+            width: calc( 50% - 2rem);
+            height: auto;
+            display: block;
+        }
+    }   
+
+    @media (min-width: 1100px){
+        .efx-press section{
+            width: calc(33.33% - 2rem);
+        }    
+        .efx-press .efx-press-col{
+            column-gap: 2rem;
+        }
+        .efx-press .efx-press-col p,
+        .efx-press .efx-press-col .col-grp{
+            break-inside: avoid;
+        }
+    
+        .efx-press .efx-press-col_3{
+            width: 100%;
+            columns: 3;
+        }
+        .efx-press .efx-press-col_2{
+            width: calc(66.66% - 2rem);
+            columns: 2;
+        }
+        .efx-press .efx-press-col_2 h3{
+            column-span: all;
+        }
+        .efx-press .efx-press-images{
+            width: 100%;
+        }
+        .efx-press .efx-press-stretch{
+            width: calc(33.33% - 2rem);
+            flex-direction: column;
+        }
+        .efx-press .efx-press-stretch > div{
+            width: 100%;
+        }
+        .efx-press .efx-press-stretch img{
+            width: 100%;            
+        }
     }
