--- a/assets/main.css
+++ b/assets/main.css
@@ -186,7 +186,7 @@ html.press a{
 }
 
 .efx-press-header{       
-    margin-bottom: 2rem; 
+    margin-bottom: 1.4rem; 
     position: relative;
     z-index: 1;  
 }
@@ -202,13 +202,13 @@ html.press .efx-press-header a{
     }
    
     .efx-press-image img{
-        width: calc(50% - calc( var(--colgap) / 4 ));
+        width: 100%;
         margin-bottom: calc( var(--colgap) / 2 );
     }
     
     @media (min-width: 720px){
         .efx-press-header{
-                    
+            margin-bottom: 2rem; 
         }
         .efx-press-image img{
             width: calc(50% - calc( var(--colgap) / 2 ));
